2007-12-20 Dmitry Dulepov  <dmitry@typo3.org>

	* Added CSH for flexforms (requires support from core, feature request #7028)

2007-12-19 Dmitry Dulepov  <dmitry@typo3.org>

	* Committed improved icon for closed comments (thanks to Ben)

2007-12-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: t3lib_BEfunc is not defined sometimes when using refindex

2007-12-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: Fatal error: Cannot redeclare tx_comments_mustupdatetempflexfile() in typo3conf/temp_CACHED_ps1660_ext_tables.php on line 2924

2007-12-05 Dmitry Dulepov  <dmitry@typo3.org>

	* Localized requiredFields_errorWrap
	* Removed "align" attribute from the template

2007-12-04 Dmitry Dulepov  <dmitry@typo3.org>

	* Added date formatting TypoScript setting
	* Updated documentation: added information about TypoScript template
	* Added check for correct inclusion of extension's TypoScript template to main TypoScript template

2007-11-26 Dmitry Dulepov  <dmitry@typo3.org>

	* Added length to mysql index because some mysql versions refused to use TEXT column without length
	* Changed default sorting direction to show last comments first
	* Added wizard to edit associated entry inside comment record

2007-11-18 Dmitry Dulepov  <dmitry@typo3.org>

	* Added plugin to "New content element" wizard
	* Added manual (needs better screenshots)

2007-11-16 Dmitry Dulepov  <dmitry@typo3.org>

	* Enable commenting for pages

2007-11-15 Dmitry Dulepov  <dmitry@typo3.org>

	* Changed setup to enable other extensions to add prefixes
	* Added hook to disable comments for individual items
	* Changed extension's category from "Frontend" to "Frontend plugin"
	* Adjusted page cache expiration if commenting is going to be disabled in future

2007-11-07 Dmitry Dulepov  <dmitry@typo3.org>

	* Made a workaround for pre-4.2 bug where TYPO3 does not correctly handle flexform sheet references (see http://bugs.typo3.org/view.php?id=6581)